--- a/docker_compse/app.yaml
+++ b/docker_compse/app.yaml
@@ -2,23 +2,47 @@ version: '3.8'
 
 services:
   app:
-      build:
-        context: ..
-        dockerfile: Dockerfile
-      container_name: app
-      volumes:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: app
+    volumes:
       - ../src/:/usr/backend_app/src
-      working_dir: /usr/backend_app/
-      ports:
-        - "8080:8080"
-      command:  bash -c 'python src/manage.py runserver 0.0.0.0:8080'
-      env_file:
-        - ../.env
-      networks:
-        - app-network
+    working_dir: /usr/backend_app/
+    ports:
+      - "8080:8080"
+    command:  bash -c 'python src/manage.py runserver 0.0.0.0:8080'
+    depends_on:
+     - database
+    env_file:
+      - ../.env
+    networks:
+      - app-network
 
 
+  database:
+    image: mysql:latest
+    container_name: database
+    cap_add:
+      - SYS_NICE
+    restart: always
+    environment:
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    ports:
+      - '3306:3306'
+    volumes:
+      - database:/var/lib/mysql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    env_file:
+      - ../.env
+    networks:
+      - app-network
 
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  database:
+    driver: local
