--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.9.13"
 django = "4.1"
+python-dotenv = "^1.0.1"
+mysqlclient = "^2.2.6"
+mysql-connector-python = "^9.1.0"
 
 
 [build-system]
